# angry_at_the_robot

./: .gitignore  Makefile  README.md  pyproject.toml
src/: __main__.py  augmenter.py  cli.py  generator.py  indexer.py  models.py  retriever.py
src/student/: __main__.py  cli.py  generator.py  indexer.py  models.py  retriever.py
student/: __main__.py  dataset.py  eval.py  generator.py  indexer.py  models.py  retriever.py
