[project]
name = "rag"
version = "0.1.0"
description = "Retrieval Augmented Generation, that’s it. That’s the goal of this project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bm25s>=0.3.8",
    "fire>=0.7.1",
    "flake8>=7.3.0",
    "mypy>=1.20.2",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "tqdm>=4.67.3",
    "transformers>=5.7.0",
]
